Implement setting page.

--- a/setting.html
+++ b/setting.html
@@ -7,10 +7,10 @@
   <title>MakeLink settings</title>
 </head>
 <body>
+  <a href="#!" class="add-button">Add Button</a>
   <ul class="form-container">
     <li class=form><input type="text"><a href="#!" class="delete-button">[delete]</a></li>
   </ul>
-  <a href="#!" class="add button">Add Button</a>
 </body>
 </html>
 
